# p-agent

./: .gitignore  NOTES.md  README.md  agent.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 2026-04-09-task-scheduling-and-dashboard.md
prompts/: __init__.py  system.py  telegram.py
services/: __init__.py  agent_core.py  email.py  fetch_service.py  git_repo.py  github_service.py  scheduler.py  telegram_service.py  workspace.py
skills/: __init__.py  dashboard.py  hn_digest.py  vietnamese_dashboard.py  vietnamese_study.py  vietnamese_vocab.py
tests/: test_build_messages.py  test_email.py  test_handlers.py  test_scheduler.py
tools/: definitions.py  handlers.py
utils/: __init__.py  auth.py  email_utils.py  messages.py
